--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
+    "ethers": "^6.1.0",
     "face-api.js": "^0.22.2",
     "libphonenumber-js": "^1.10.21",
     "react": "^18.2.0",
@@ -26,6 +30,7 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
     "sweetalert2": "^11.7.2",
+    "tweetnacl": "^1.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
