--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "crypto-js": "^4.1.1",
     "ethers": "^6.1.0",
     "face-api.js": "^0.22.2",
+    "jsencrypt": "^3.3.2",
     "libphonenumber-js": "^1.10.21",
+    "openpgp": "^5.7.0",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
