--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
+    "ethereumjs-util": "^7.1.5",
     "ethers": "^6.1.0",
     "face-api.js": "^0.22.2",
+    "js-sha3": "^0.8.0",
     "jsencrypt": "^3.3.2",
     "libphonenumber-js": "^1.10.21",
     "openpgp": "^5.7.0",
@@ -33,6 +35,7 @@
     "sass": "^1.58.3",
     "sweetalert2": "^11.7.2",
     "tweetnacl": "^1.0.3",
+    "tweetnacl-util": "^0.15.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
