--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "libphonenumber-js": "^1.10.21",
     "openpgp": "^5.7.0",
     "react": "^18.2.0",
-    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
