--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsencrypt": "^3.3.2",
     "libphonenumber-js": "^1.10.21",
     "openpgp": "^5.7.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
