--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.2",
+    "react-icons": "^4.9.0",
     "react-image": "^4.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
