--- a/package.json
+++ b/package.json
@@ -1,46 +1,40 @@
 {
-  "name": "humanid_app",
+  "name": "humanid_api_redesign",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@hookform/resolvers": "^2.9.11",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/material": "^5.11.11",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.3",
-    "crypto": "^1.0.1",
-    "crypto-browserify": "^3.12.0",
+    "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
-    "ethereumjs-util": "^7.1.5",
-    "ethers": "^6.1.0",
     "face-api.js": "^0.22.2",
     "js-sha3": "^0.8.0",
-    "jsencrypt": "^3.3.2",
-    "libphonenumber-js": "^1.10.21",
-    "openpgp": "^5.7.0",
+    "libphonenumber-js": "^1.10.34",
+    "openpgp": "^5.9.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.2",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
-    "react-image": "^4.1.0",
     "react-loader-spinner": "^5.3.4",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-webcam": "^7.0.1",
+    "react-webcam": "^7.1.0",
     "redux-persist": "^6.0.0",
-    "sass": "^1.58.3",
-    "sweetalert2": "^11.7.2",
+    "sass": "^1.62.1",
+    "sweetalert2": "^11.7.10",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "web-vitals": "^2.1.4",
-    "yup": "^1.0.2"
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
